fix the gap issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,7 +197,7 @@ nav.navbar.bootsnav {
     background-color: #fff;
     border-bottom: transparent;
     height: 50px;
-    margin-right: 190px;
+    margin-right: 0;
     margin-top: 30px;
 }
 
@@ -210,7 +210,8 @@ nav.navbar.bootsnav {
 .navbar-header {
     display: inline-block;
     text-transform: capitalize;
-    width: 180px;
+    width: auto;
+
 
 }
 
@@ -230,8 +231,10 @@ nav.navbar.bootsnav {
 
 .nav-links {
     display: flex;
-    width: 260px;
-    margin-left: 990px;
+    margin-left: auto;
+    margin-right: 0;
+    padding-left:620px;
+   
 }
 
 .scroll {
@@ -250,6 +253,7 @@ nav.navbar.bootsnav {
     font-family: normal;
     font-weight: 400;
     font-size: 19px;
+
 }
 
 /*-------------------------------------
